tests/paczka1/small_fuzzy/47542712.err
Error in line 9: 8HRgUOF A2`0 98,1
Error in line 8: 8HRgUOF A548 82,2
